--- a/reference.bib
+++ b/reference.bib
@@ -1,15 +1,14 @@
 % !Mode:: "TeX:UTF-8"
-%[1] 王浩刚，聂在平.三维矢量散射积分方程中奇异性分析[J].电子学报，1999, 27(12): 68-71
 
-@article{wang1999sanwei,
-  title={三维矢量散射积分方程中奇异性分析},
-  author={王浩刚 and 聂在平},
-  journal={电子学报},
-  volume={27},
-  number={12},
-  pages={68--71},
-  year={1999},
-  language =     {Chinese}
+@article{song2014short,
+  title={Short Text Classification: A Survey},
+  author={Song, Ge and Ye, Yunming and Du, Xiaolin and Huang, Xiaohui and Bie, Shifu},
+  journal={ISSN 1796-2048 Volume 9, Number 5, May 2014},
+  volume={9},
+  number={5},
+  pages={635},
+  year={2014},
+  publisher={Citeseer}
 }
 %[2] X. F. Liu, B. Z. Wang, W. Shao. A marching-on-in-order scheme for exact attenuation constant extraction of lossy transmission lines[C]. China-Japan Joint Microwave Conference Proceedings, Chengdu, 2006, 527-529
 @conference{liuxf2006,
