--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1,11 +1,24 @@
 \thesischapterexordium
 \section{研究工作的背景与意义}
-随着信息化进程的不断推进，我国互联网市场空前繁荣。从WEB2.0时代开始，到如今的“互联网+”时代，互联网已经融入了人们的生活中，也对各行各业产生了深远的影响。
-根据中国互联网络信息中心发布的《第40次中国互联网络发展状况统计报告\footnote{\url{http://www.cnnic.net.cn/hlwfzyj/hlwxzbg/hlwtjbg/201708/P020170807351923262153.pdf}}》（以下简称《报告》）显示，
-截止到2017年6月，我国网民规模达到7.51亿，其中手机网民更是达到7.24亿，占总体网民的96.3\%。
-同时，使用率排名前三的互联网应用分别是即时通信（92.1\%）、网络新闻（83.1\%）、搜索引擎（81.1\%）。
-可以明显看出，人们使用互联网以及获取信息的方式，已经从以前的桌面台式电脑，转变为移动端的手机、IPAD等掌上设备。
-移动设备的盛行，使得人们发布和接收信息都更加方便，据统计，在2012年，微博用户已经增长到3.68亿，其中69\%通过移动设备登陆，每天能产生1.17亿条微博。
+随着信息化进程的不断推进，我国互联网市场空前繁荣。从WEB2.0时代开始，
+到如今的“互联网+”时代，互联网已经融入了人们的生活中，也对各行各业产生了深远的影响。
+根据中国互联网络信息中心发布的《第40次中国互联网络发展状况统计报告\footnote{\url{http://www.cnnic.net.cn/hlwfzyj/hlwxzbg/hlwtjbg/201708/P020170807351923262153.pdf}}》显示，
+截止到2017年6月，我国网民规模达到7.51亿，其中手机网民更是达到7.24亿，
+占总体网民的96.3\%，使用率排名前三的互联网应用分别是即时通信（92.1\%）、网络新闻（83.1\%）、
+搜索引擎（81.1\%），使用率最高的三个app应用则是微信（84.3\%）、QQ（65.8\%）、微博（38.7\%）。
+可以明显看出，人们使用互联网以及获取信息的方式，已经从以前的桌面台式电脑，
+转变为移动端的手机、IPAD等掌上设备。
+
+移动设备的盛行，使得人们发布和接收信息都更加方便，
+据统计，在2012年，微博用户已经增长到3.68亿，其中69\%通过移动设备登陆，
+每天能产生1.17亿条微博。大量的手机用户增加，让互联网信息爆炸式增长，
+并且产生了大量碎片化的信息，如微博、QQ说说、留言、商品评论等，如何理解并利用这些浩瀚如烟的短文本信息成了互联网应用最为迫切的需求之一。
+例如，根据一个用户每天在微博或朋友圈上发布的信息挖掘出该用户的兴趣倾向，
+从而让运营商精确投放用户感兴趣的广告，减少无关广告对用户体验的伤害。
+但是和传统文章相比，短文本过于短小（通常在100字以内，一般是一句话的长度），
+不能提供足够的词共现（word co-occurrence）或上下文，以至于很难从中提取出有效的文本特征\citing{song2014short}。
+因此，常规机器学习技术与文本挖掘算法很难直接应用在短文本之上。
+
 
 \section{国内外研究现状}
 \section{课题主要内容}
