--- a/reference.bib
+++ b/reference.bib
@@ -10,84 +10,83 @@
   year={2014},
   publisher={Citeseer}
 }
-%[2] X. F. Liu, B. Z. Wang, W. Shao. A marching-on-in-order scheme for exact attenuation constant extraction of lossy transmission lines[C]. China-Japan Joint Microwave Conference Proceedings, Chengdu, 2006, 527-529
-@conference{liuxf2006,
-  author =       {Liu,X F and Wang, Bing Zhong and Shao,Wei and Wen Wang},
-  title =        {A marching-on-in-order scheme for exact attenuation constant extraction of lossy transmission lines},
-  year =         {2006},
-  pages  =       {527-529},
-  address =      {Chengdu},
-  booktitle =    {China-Japan Joint Microwave Conference Proceedings}
+@article{zelikovitz2005transductive,
+  title={Transductive learning for short-text classification problems using latent semantic indexing},
+  author={Zelikovitz, Sarah and Marquez, Finella},
+  journal={International Journal of Pattern Recognition and Artificial Intelligence},
+  volume={19},
+  number={02},
+  pages={143--163},
+  year={2005},
+  publisher={World Scientific}
 }
 
-%[3] 竺可桢.物理学[M].北京：科学出版社，1973, 56-60
-@book{zhu1973wulixue,
-  title={物理学},
-  author={竺可桢},
-  year={1973},
-  address={北京},
-  pages={56-60},
-  publisher={科学出版社},
-  language =     {Chinese}
+@inproceedings{chen2011short,
+  title={Short text classification improved by learning multi-granularity topics},
+  author={Chen, Mengen and Jin, Xiaoming and Shen, Dou},
+  booktitle={IJCAI},
+  pages={1776--1781},
+  year={2011}
 }
 
-%[4] 陈念永.毫米波细胞生物效应及抗肿瘤研究[D].成都：电子科技大学，2001, 50-60
-@thesis{chen2001hao,
-  AUTHOR =       {陈念永},
-  TITLE =        {毫米波细胞生物效应及抗肿瘤研究},
-  institution =       {电子科技大学},
-  YEAR =         {2001},
-  pages  =       {50-60},
-  address =      {成都},
-  language =     {Chinese}
+@inproceedings{cabrera2013distributional,
+  title={Distributional term representations for short-text categorization},
+  author={Cabrera, Juan Manuel and Escalante, Hugo Jair and Montes-y-G{\'o}mez, Manuel},
+  booktitle={International Conference on Intelligent Text Processing and Computational Linguistics},
+  pages={335--346},
+  year={2013},
+  organization={Springer}
 }
 
-%[5] 顾春.牢牢把握稳中求进的总基调[N].人民日报，2012年3月31日
-@newspaper{gu2012lao,
-  AUTHOR =       {顾春},
-  TITLE =        {牢牢把握稳中求进的总基调},
-  JOURNAL =      {人民日报},
-  date =         {2012年3月31日},
-  language =     {Chinese}
+@inproceedings{feng2013chinese,
+  title={Chinese Short Text Classification Based on Domain Knowledge.},
+  author={Feng, Xiao and Shen, Yang and Liu, Chengyong and Liang, Wei and Zhang, Shuwu},
+  booktitle={IJCNLP},
+  pages={859--863},
+  year={2013}
 }
-
-%[6] 冯西桥.核反应堆压力容器的LBB分析[R].北京：清华大学核能技术设计研究院，1997年6月25日
-@techreport{feng997he,
-  AUTHOR =       {冯西桥},
-  TITLE =        {核反应堆压力容器的{LBB}分析},
-  institution =  {清华大学核能技术设计研究院},
-  date =         {1997年6月25日},
-  address =      {北京},
-  language =     {Chinese}
+@inproceedings{socher2012semantic,
+  title={Semantic compositionality through recursive matrix-vector spaces},
+  author={Socher, Richard and Huval, Brody and Manning, Christopher D and Ng, Andrew Y},
+  booktitle={Proceedings of the 2012 joint conference on empirical methods in natural language processing and computational natural language learning},
+  pages={1201--1211},
+  year={2012},
+  organization={Association for Computational Linguistics}
 }
-
-%[7] 肖珍新.一种新型排渣阀调节降温装置[P].中国，实用新型专利，ZL201120085830.0, 2012年4月25日
-@patent{xiao2012yi,
-  AUTHOR =       {肖珍新},
-  TITLE =        {一种新型排渣阀调节降温装置},
-  date =         {2012年4月25日},
-  type =         {实用新型专利},
-  country =      {中国},
-  id =     {ZL201120085830.0},
-  language =     {Chinese}
+@inproceedings{blunsom2014convolutional,
+  title={A convolutional neural network for modelling sentences},
+  author={Blunsom, Phil and Grefenstette, Edward and Kalchbrenner, Nal},
+  booktitle={Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics},
+  year={2014},
+  pages={655--665},
+  organization={Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics}
 }
-
-%[8] 中华人民共和国国家技术监督局.GB3100-3102.中华人民共和国国家标准--量与单位[S]. 北京：中国标准出版社，1994年11月1日
-@standard{zhong1994zhong,
-  institution =       {中华人民共和国国家技术监督局},
-  id =       {GB3100-3102},
-  TITLE =        {中华人民共和国国家标准--量与单位},
-  PUBLISHER =    {中国标准出版社},
-  date =         {1994年11月1日},
-  address =      {北京},
-  language =     {Chinese}
+@conference{chen2015convolutional,
+  title={Convolutional neural network for sentence classification},
+  author={Chen, Yahui},
+  year={2014},
+  pages={1746–-1751},
+  booktitle={Proceedings of the 2014 Conference on EMNLP}
 }
-
-@digital{clerc2010discrete,
-  author =       {M. Clerc},
-  title =        {Discrete particle swarm optimization: a fuzzy combinatorial box},
-  type =         {EB/OL},
-  date=          {July 16, 2010},
-  url =          {http://clere.maurice.free.fr/pso/Fuzzy_Discrere_PSO/Fuzzy_DPSO.htm},
-  language =     {}
+@inproceedings{lai2015recurrent,
+  title={Recurrent Convolutional Neural Networks for Text Classification.},
+  author={Lai, Siwei and Xu, Liheng and Liu, Kang and Zhao, Jun},
+  booktitle={AAAI},
+  volume={333},
+  pages={2267--2273},
+  year={2015}
+}
+@inproceedings{zhang2015character,
+  title={Character-level convolutional networks for text classification},
+  author={Zhang, Xiang and Zhao, Junbo and LeCun, Yann},
+  booktitle={Advances in neural information processing systems},
+  pages={649--657},
+  year={2015}
+}
+@conference{li2015component,
+  title={Component-enhanced chinese character embeddings},
+  author={Li, Yanran and Li, Wenjie and Sun, Fei and Li, Sujian},
+  year={2015},
+  pages={829–-834},
+  booktitle={Proceedings of the 2015 Conference on EMNLP}
 }
