--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -54,6 +54,6 @@
 纽约大学的张翔等人\citing{zhang2015character}实现了一个字符级别的卷积网络（ConvNets），将中文语句转化为汉语拼音，对中文语料进行分类。
 北京大学的李嫣然等人\citing{li2015component}通过在文本表示中引入部首信息，利用汉字中部首也包含一定语义信息的特点，在连续词袋模型（Continuous Bag-of-Words，CBOW）的基础上，构造出了一个新的字向量模型，在中文新闻标题分类上获得了明显的效果。
 
-近几年，自然语言处理领域不断发展，一些新的方法相继出现，2017年，Google公司开创性的提出
+近几年，自然语言处理领域不断发展，一些新的方法也相继出现，2017年，Google公司开创性的提出注意力（Attention）观点，认为模型的结果并不是和每一个模型提取出的特征都有密切的关系，往往一个结果只是有某一个或某几个关键特征所决定的。这给了学者们新的启示，一些学者于是将注意力观点应用在短文本分类之中。
 \section{课题主要内容}
 \section{本论文的结构安排}
