--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,7 @@
     
     \thesistableofcontents
     \include{section/chapter1}
+    \include{section/chapter2}
     
 
     \thesisloadbibliography[nocite]{reference}
