--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -52,8 +52,23 @@
 
 中国科学院自动化研究所的来斯惟等人\citing{lai2015recurrent}设计了一个循环卷积神经网络，在中文长文本分类任务中取得了较好的效果。
 纽约大学的张翔等人\citing{zhang2015character}实现了一个字符级别的卷积网络（ConvNets），将中文语句转化为汉语拼音，对中文语料进行分类。
-北京大学的李嫣然等人\citing{li2015component}通过在文本表示中引入部首信息，利用汉字中部首也包含一定语义信息的特点，在连续词袋模型（Continuous Bag-of-Words，CBOW）的基础上，构造出了一个新的字向量模型，在中文新闻标题分类上获得了明显的效果。
+北京大学的李嫣然等人\citing{li2015component}通过在文本表示中引入部首信息，
+利用汉字中部首也包含一定语义信息的特点，在连续词袋模型（Continuous Bag-of-Words，CBOW）的基础上，
+构造出了一个新的字向量模型，在中文新闻标题分类上获得了明显的效果。
 
-近几年，自然语言处理领域不断发展，一些新的方法也相继出现，2017年，Google公司开创性的提出注意力（Attention）观点，认为模型的结果并不是和每一个模型提取出的特征都有密切的关系，往往一个结果只是有某一个或某几个关键特征所决定的。这给了学者们新的启示，一些学者于是将注意力观点应用在短文本分类之中。
+近几年，自然语言处理领域不断发展，一些新的方法也相继出现，2017年，
+Google公司开创性的提出注意力（Attention）观点，
+认为模型的结果并不是和每一个模型提取出的特征都有密切的关系，
+往往一个结果只是由某一个或某几个关键特征所决定的。
+这给了学者们新的启示，一些学者于是将注意力观点应用在文本分类之中。
+在文献\cite{er2016attention}中，南洋理工大学的Meng Joo Er等人开发的基于注意力池化的卷积神经网络，
+利用平行的双向长短期记忆网络构造了一个输入文本的中间向量表示，以此作为卷积神经网络生成的文件特征向量的注意力权重，
+最后将经过处理后的文本特征向量输入分类器进行分类；
+卡耐基梅隆大学的Zichao Yang等人\citing{yang2016hierarchical}则实现了一个分层注意力网络，整个网络由两层循环神经网络组成，
+第一层网络对句子进行建模，经过注意力机制处理之后得到句子的向量表示，
+然后第二层根据所有的句子向量得到文章的向量表示，最后根据这个文章向量获得分类结果。
+
+尽管基于注意力机制的文本分类在近几年获得了研究人员的关注并得到了很多成果，但是这些成果大多是基于英文语料的，
+如何将该方法推广到其他语言中，并且如何通过注意力机制提升中文文本分类，特别是中文短文本的分类依然是研究人员需要继续的课题。
 \section{课题主要内容}
 \section{本论文的结构安排}
