--- a/reference.bib
+++ b/reference.bib
@@ -90,3 +90,64 @@
   pages={829–-834},
   booktitle={Proceedings of the 2015 Conference on EMNLP}
 }
+@article{er2016attention,
+  title={Attention pooling-based convolutional neural network for sentence modelling},
+  author={Er, Meng Joo and Zhang, Yong and Wang, Ning and Pratama, Mahardhika},
+  journal={Information Sciences},
+  volume={373},
+  pages={388--403},
+  year={2016},
+  publisher={Elsevier}
+}
+@inproceedings{yang2016hierarchical,
+  title={Hierarchical Attention Networks for Document Classification.},
+  author={Yang, Zichao and Yang, Diyi and Dyer, Chris and He, Xiaodong and Smola, Alexander J and Hovy, Eduard H},
+  booktitle={HLT-NAACL},
+  pages={1480--1489},
+  year={2016}
+}
+@article{张劲松2009回溯正向匹配中文分词算法,
+  title={回溯正向匹配中文分词算法},
+  author={张劲松 and 袁健},
+  journal={计算机工程与应用},
+  volume={45},
+  number={22},
+  pages={132--134},
+  year={2009}
+}
+@article{李娟2010一种改进的逆向匹配快速切分算法,
+  title={一种改进的逆向匹配快速切分算法},
+  author={李娟 and 周贤善},
+  journal={信息系统工程},
+  volume={1},
+  number={2},
+  pages={133--134},
+  year={2010}
+}
+@article{陈耀东2005基于有向图的双向匹配分词算法及实现,
+  title={基于有向图的双向匹配分词算法及实现},
+  author={陈耀东 and 王挺},
+  journal={计算机应用},
+  volume={25},
+  number={06},
+  pages={1442--1444},
+  year={2005}
+}
+@article{薛苏琴2016基于向量空间模型的中文文本相似度的研究,
+  title={基于向量空间模型的中文文本相似度的研究},
+  author={薛苏琴 and 牛永洁},
+  journal={电子设计工程},
+  volume={24},
+  number={10},
+  pages={28--31},
+  year={2016}
+}
+@inproceedings{mccallum1998comparison,
+  title={A comparison of event models for naive bayes text classification},
+  author={McCallum, Andrew and Nigam, Kamal and others},
+  booktitle={AAAI-98 workshop on learning for text categorization},
+  volume={752},
+  pages={41--48},
+  year={1998},
+  organization={Madison, WI}
+}
