--- a/reference.bib
+++ b/reference.bib
@@ -151,3 +151,12 @@
   year={1998},
   organization={Madison, WI}
 }
+@inproceedings{hinton1986learning,
+  title={Learning distributed representations of concepts},
+  author={Hinton, Geoffrey E},
+  booktitle={Proceedings of the eighth annual conference of the cognitive science society},
+  volume={1},
+  pages={12},
+  year={1986},
+  organization={Amherst, MA}
+}
