--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,7 @@
     \thesistableofcontents
     \include{section/chapter1}
     \include{section/chapter2}
+    \include{section/chapter3}
     
 
     \thesisloadbibliography[nocite]{reference}
