--- a/reference.bib
+++ b/reference.bib
@@ -187,3 +187,50 @@
   year={1997},
   publisher={MIT Press}
 }
+@inproceedings{chen2015joint,
+  title={Joint Learning of Character and Word Embeddings.},
+  author={Chen, Xinxiong and Xu, Lei and Liu, Zhiyuan and Sun, Maosong and Luan, Huan-Bo},
+  booktitle={IJCAI},
+  pages={1236--1242},
+  year={2015}
+}
+@inproceedings{xu2016improve,
+  title={Improve Chinese Word Embeddings by Exploiting Internal Structure},
+  author={Xu, Jian and Liu, Jiawei and Zhang, Liangang and Li, Zhengyu and Chen, Huanhuan},
+  booktitle={Proceedings of NAACL-HLT},
+  pages={1041--1050},
+  year={2016}
+}
+@inproceedings{sun2014radical,
+  title={Radical-enhanced chinese character embedding},
+  author={Sun, Yaming and Lin, Lei and Yang, Nan and Ji, Zhenzhou and Wang, Xiaolong},
+  booktitle={International Conference on Neural Information Processing},
+  pages={279--286},
+  year={2014},
+  organization={Springer}
+}
+@inproceedings{yu2017joint,
+  title={Joint Embeddings of Chinese Words, Characters, and Fine-grained Subcharacter Components},
+  author={Yu, Jinxing and Jian, Xun and Xin, Hao and Song, Yangqiu},
+  booktitle={Proceedings of the 2017 Conference on Empirical Methods in Natural Language Processing},
+  pages={286--291},
+  year={2017}
+}
+@thesis{su2007hanzi,
+  AUTHOR =       {苏文正},
+  TITLE =        {汉字简化问题研究},
+  institution =       {兰州大学},
+  YEAR =         {2007},
+  pages  =       {53},
+  address =      {兰州},
+  language =     {Chinese}
+}
+@article{胡浩2017汉字固有属性,
+  title={基于汉字固有属性的中文字向量方法研究},
+  author={胡浩 and 李平 and 陈凯琪},
+  journal={中文信息学报},
+  volume={31},
+  number={3},
+  pages={32-40},
+  year={2017},
+}
