--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -30,6 +30,7 @@
 成为了互联网从业者与互联网技术学者所面临的一个重要难题，其突破也会具有重要的商业价值与使用价值。
 
 \section{国内外研究现状}
+\label{research_status}
 随着互联网中短文本信息的增多，短文本分类领域得到了广泛的关注，越来越多的学者投入到短文本分类的研究之中。
 但由于短文本短小、信息分散的特性，传统基于词频、词共现的分类方法通常得不到较好的效果，比如贝叶斯方法（Naive Bayes）、
 最大熵模型（Maximum Entropy Model）、K-邻近算法（K Nearest Neighbors）以及支持向量机（Support Vector Machines，SVMs）。
