--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
     \include{section/chapter1}
     \include{section/chapter2}
     \include{section/chapter3}
-    
+    \include{section/chapter4}
 
     \thesisloadbibliography[nocite]{reference}
 \end{document}
