--- a/reference.bib
+++ b/reference.bib
@@ -241,3 +241,20 @@
   pages={746--751},
   year={2013}
 }
+@article{schmidhuber2015deep,
+  title={Deep learning in neural networks: An overview},
+  author={Schmidhuber, J{\"u}rgen},
+  journal={Neural networks},
+  volume={61},
+  pages={85--117},
+  year={2015},
+  publisher={Elsevier}
+}
+@inproceedings{kalchbrenner2014convolutional,
+  title={A Convolutional Neural Network for Modelling Sentences},
+  author={Kalchbrenner, Nal and Grefenstette, Edward and Blunsom, Phil},
+  booktitle={Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  volume={1},
+  pages={655--665},
+  year={2014}
+}
