--- a/reference.bib
+++ b/reference.bib
@@ -258,3 +258,17 @@
   pages={655--665},
   year={2014}
 }
+@inproceedings{xu2015show,
+  title={Show, attend and tell: Neural image caption generation with visual attention},
+  author={Xu, Kelvin and Ba, Jimmy and Kiros, Ryan and Cho, Kyunghyun and Courville, Aaron and Salakhudinov, Ruslan and Zemel, Rich and Bengio, Yoshua},
+  booktitle={International Conference on Machine Learning},
+  pages={2048--2057},
+  year={2015}
+}
+@inproceedings{sukhbaatar2015end,
+  title={End-to-end memory networks},
+  author={Sukhbaatar, Sainbayar and Weston, Jason and Fergus, Rob and others},
+  booktitle={Advances in neural information processing systems},
+  pages={2440--2448},
+  year={2015}
+}
