--- a/reference.bib
+++ b/reference.bib
@@ -272,3 +272,28 @@
   pages={2440--2448},
   year={2015}
 }
+@article{li2007scalable,
+  title={Scalable Term Selection for Text Categorization},
+  author={Li, Jingyang and Sun, Maosong},
+  journal={EMNLP-CoNLL 2007},
+  pages={774},
+  year={2007},
+  volume={1}
+}
+@inproceedings{zhou2016compositional,
+  title={Compositional recurrent neural networks for Chinese short text classification},
+  author={Zhou, Yujun and Xu, Bo and Xu, Jiaming and Yang, Lei and Li, Changliang},
+  booktitle={Web Intelligence (WI), 2016 IEEE/WIC/ACM International Conference on},
+  pages={137--144},
+  year={2016},
+  organization={IEEE}
+}
+@article{Zhou2015A,
+  title={A C-LSTM Neural Network for Text Classification},
+  author={Zhou, Chunting and Sun, Chonglin and Liu, Zhiyuan and Lau, Francis C. M.},
+  journal={Computer Science},
+  volume={1},
+  number={4},
+  pages={39-44},
+  year={2015},
+}
