--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,8 @@
 
 \title{基于深度学习的短文本分类研究}
 \author{胡可奇}
-
+\usepackage{listings}
+\lstset{breaklines}
 \begin{document}
 
     %\include{section/abstract}
@@ -14,6 +15,7 @@
     \include{section/chapter2}
     \include{section/chapter3}
     \include{section/chapter4}
+    \include{section/chapter5}
 
     \thesisloadbibliography[nocite]{reference}
 \end{document}
