--- a/section/chapter4.tex
+++ b/section/chapter4.tex
@@ -1,4 +1,5 @@
 \chapter{Attention-Based字词结合卷积循环中文短文本分类模型}
+\label{4_section}
 短文本分类在自然语言处理领域中扮演着重要的角色，
 在垃圾信息过滤、语义分析、自动问答等任务中有着广泛的应用。
 本节将通过结合基于局部感知域理论设计的卷积神经网络以及基于时间记忆理论设计的循环神经网络，
