--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -73,4 +73,38 @@ Google公司开创性的提出注意力（Attention）观点，
 尽管基于注意力机制的文本分类在近几年获得了研究人员的关注并得到了很多成果，但是这些成果大多是基于英文语料的，
 如何将该方法推广到其他语言中，并且如何通过注意力机制提升中文文本分类，特别是中文短文本的分类依然是研究人员需要继续的课题。
 \section{课题主要内容}
+本论文主要研究了深度学习在中文短文本分类算法中的应用。
+首先，通过研究国内外学者在中文词向量算法上的相关成果，
+结合汉字的字体结构和内在语义信息，提出了两种综合汉字偏旁部首信息的字/词向量模型。然后
+以此基础构建了一个结合字向量与词向量的新型短文本分类模型。该模型通过Attention-Based
+卷积循环神经网络，从字向量和词向量数据中同时提取文本特征，克服了短文本分类中文本信息过少的难点，
+达到了能够用于实际应用的分类效果。
+并且通过实验，和同类模型对比，验证了算法的有效性。最后，设计并实现了一个完整的短文本分类系统。
+论文具体内容可以工作可以概括为如下几个方面：
+\begin{enumerate}
+    \item 在研究了汉字结构与内部特征之后，改进了CBOW算法，提出了一个能够利用汉字以及其偏旁部首
+    信息的词向量模型，让原本针对英语设计的词向量模型更加适合汉语。
+    \item 在前面词向量模型的基础了，提出了另一个部首信息增强的字向量模型，
+    克服了分词错误对文本表示的影响，补充了传统词向量表示方法的不足。
+    \item 结合卷积神经网络与循环神经网络的优点，并引入Attention Model，设计了一个新型有效的
+    特征提取网络，并通过同时提取字向量与词向量数据特征的方式，实现短文本分类。
+\end{enumerate}
 \section{本论文的结构安排}
+本论文旨在使用深度学习的相关技术，实现一个切实有效的中文短文本分类系统，提升中文短文本
+分类的效果，论文的主要结构安排如下：
+
+第一章，简要的概述了短文本分类的背景和意义，国内外研究现状以及中文短文本分类所遇到的问题。
+
+第二章，详细地介绍了传统文本分类技术的不足以及深度学习技术在自然语言处理中的应用。
+
+第三章，首先介绍了汉字的语义特征以及中文文本表示的一些技术方法，然后结合汉字的偏旁部首信息，
+提出了部首信息增强的中文词向量模型（RECWE）和部首信息增强的中文字向量模型（RECCE），并通过
+与同类词向量/字向量模型进行比较，验证了本文模型的有效性。
+
+第四章，提出了一种基于全新结构的短文本分类模型。在本章中，基于传统的卷积神经网络与循环神经网络，
+构建了一种通过Attention Model增强的卷积循环特征提取网络，然后通过双通道的设计，
+结合了字向量数据与词向量数据，充分丰富短文本的文本信息，让模型能够同时获取两者的特征。最后
+，通过具体的实验，验证了模型的正确性。
+
+第五章，设计并实现了一个短文本分类服务系统。首先简单阐述了系统的总体结构和运行流程，然后
+对各个功能模型进行了详细介绍，接着以具体的新闻网站为语料来源对系统进行测试，并对测试结果进行总结和分析。
