--- a/section/chapter5.tex
+++ b/section/chapter5.tex
@@ -332,7 +332,7 @@ for(a = b; a < window * 2 + 1 - b; a++)
     \item 根据相关配置文件，在一定范围内微调网络的参数并使用新参数重新训练玩了个，
     尝试优化网络。在调整一定次数之后，取性能最好的网络参数作为最后的有效参数。
     \item 保存完成调优之后的网络参数，以便后续阶段使用。
-    \end{enumerate}
+\end{enumerate}
 
 表\ref{net_data_alert_table}展示了需要调节的网络参数及其调节范围，参数微调时会在范围内对相关参数重新取值。
 图\ref{train_tmp_data}展示了系统保存的网络参数，训练过程中产生所有模型参数都会被保存并统一编号，方便日后管理
@@ -409,7 +409,52 @@ Nginx反向代理服务器提供链接分发服务，保证系统的稳定性以
 为了验证系统的有效性以及在最新短文本语料数据上的分类效果，
 需要在实际网络环境中进行系统测试，并对系统的测试结果进行统计、分析。
 本文将在今日头条新闻网站的标题数据上对系统进行实际的测试。
-\subsection{新闻标题数据搜索}
+\subsection{新闻标题语料搜集}
+\begin{figure}[!hbp]
+    \includegraphics[scale=0.5]{picture/spider_data.png}
+    \caption{新闻标题数据增长}
+    \label{spider_data_chart}
+\end{figure}
+为了验证爬虫模块的可靠性和稳定性，以及给后续分类模块提供真实的语料数据，
+爬虫网络设置了3个分布式节点连续5天对今日头条网站进行数据爬取工作。同时为了
+确保原始语料数据分类的准确性，爬虫模块丢弃了今日头条网站中分类为“视频”和“广告”的文本，
+因为这两个分类很多时候只代表其内容的性质，并不是从语言上进行分类，加入训练语料会影响模块
+对其他分类的判断。系统5天获取的新闻标题数据如图\ref{spider_data_chart}所示。
+可以看出，同过代理IP池、动态爬取间隔等方式，爬虫模块能够很好的突破一般网站的反爬虫技术，
+持续增量的获取所需数据。但也由于爬取间隔的存在，限制了每天能获取新闻的数量，需要通过其他手段改进。
 \subsection{汉字信息库}
+汉字信息库用于给词向量/字向量训练算法提供汉字部首信息，系统共搜集了包括繁简体字在内的
+总计20880个汉字的偏旁部首信息，基本上覆盖了人们日常交流中使用的所有汉字。部分数据如表\ref{comp_table}所示：
+\begin{table}[h]
+    \caption{汉字信息库数据}
+    \begin{tabular}{|c|c|c|}
+        \hline
+        汉字 & 偏旁 & 部首 \\
+        \hline
+        谴 & 遣 & 讠 \\
+        \hline
+        延 & 止 & 廴 \\
+        \hline
+        叛 & 半反 & 又 \\
+        \hline
+        蘔 & 穎 & 艹 \\
+        \hline
+    \end{tabular}
+    \label{comp_table}
+    \end{table}
 \subsection{分类测试结果}
+模型训练子系统根据第四章的网络结构与相关参数，在每天爬取的新闻标题数据上训练短文本分类网络。
+并抽取300条实时新闻，通过系统的分类子系统对其进行测试。测试指标采用了\label{test_fun}小节
+介绍的准确率与召回率，计算公式如\label{accuracy}和\label{recall}所示。
+
+图和展示了系统连续5天的准确率与召回率统计，可以看出，准确率整体上保持了一个很高的水准，
+而与之相比，系统前期的召回率则非常低，这主要是由于开始系统语料库中新闻语料数据较少，
+特别每一类的语料数量非常不均衡，出现次数最少的几类语料（如“时尚”、“游戏”等）甚至
+只占总体语料的10\%~15\%，极大的影响了系统在这些类别上的分类效果。
+随着爬虫模块搜集的各类语料逐渐增多，召回率也逐步提升，说明通过系统的不断运行，
+分类模型的可靠性能够不断提升，最终趋于稳定。同时对于包含新词的语料，虽然初次分类时会由于
+预处理模块将其忽略，导致错误分类，但随着语料的补充与完善，系统能够在之后的训练中将其吸收，
+得到正确的结果。
 \section{本章小节}
+本章主要设计并实现了一个短文本分类服务系统。首先对系统的整体架构及运行流程进行了简要描述，
+然后对系统中的重要功能模型进行了进一步的介绍。最后针对今日头条网站进行测试，验证了系统的正确性和有效性。
