--- a/section/chapter5.tex
+++ b/section/chapter5.tex
@@ -444,10 +444,10 @@ Nginx反向代理服务器提供链接分发服务，保证系统的稳定性以
     \end{table}
 \subsection{分类测试结果}
 模型训练子系统根据第四章的网络结构与相关参数，在每天爬取的新闻标题数据上训练短文本分类网络。
-并抽取300条实时新闻，通过系统的分类子系统对其进行测试。测试指标采用了\label{test_fun}小节
-介绍的准确率与召回率，计算公式如\label{accuracy}和\label{recall}所示。
+并抽取300条实时新闻，通过系统的分类子系统对其进行测试。测试指标采用了\ref{test_fun}小节
+介绍的准确率与召回率，计算公式如\ref{accuracy}和\ref{recall}所示。
 
-图和展示了系统连续5天的准确率与召回率统计，可以看出，准确率整体上保持了一个很高的水准，
+图\ref{acc}和\ref{recall}展示了系统连续5天的准确率与召回率统计，可以看出，准确率整体上保持了一个很高的水准，
 而与之相比，系统前期的召回率则非常低，这主要是由于开始系统语料库中新闻语料数据较少，
 特别每一类的语料数量非常不均衡，出现次数最少的几类语料（如“时尚”、“游戏”等）甚至
 只占总体语料的10\%~15\%，极大的影响了系统在这些类别上的分类效果。
@@ -455,6 +455,17 @@ Nginx反向代理服务器提供链接分发服务，保证系统的稳定性以
 分类模型的可靠性能够不断提升，最终趋于稳定。同时对于包含新词的语料，虽然初次分类时会由于
 预处理模块将其忽略，导致错误分类，但随着语料的补充与完善，系统能够在之后的训练中将其吸收，
 得到正确的结果。
+\begin{figure}[!hbp]
+    \includegraphics[scale=0.5]{picture/acc.png}
+    \caption{系统运行5天的准确率统计}
+    \label{acc}
+\end{figure}
+\begin{figure}[!hbp]
+    \includegraphics[scale=0.5]{picture/recall.png}
+    \caption{系统运行5天的召回率统计}
+    \label{recall}
+\end{figure}
+
 \section{本章小节}
 本章主要设计并实现了一个短文本分类服务系统。首先对系统的整体架构及运行流程进行了简要描述，
 然后对系统中的重要功能模型进行了进一步的介绍。最后针对今日头条网站进行测试，验证了系统的正确性和有效性。
