--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 \lstset{breaklines}
 \begin{document}
 
-    %\include{section/abstract}
+    \include{section/abstract}
     
     \thesistableofcontents
     \include{section/chapter1}
@@ -16,6 +16,7 @@
     \include{section/chapter3}
     \include{section/chapter4}
     \include{section/chapter5}
+    \include{section/chapter6}
 
     \thesisloadbibliography[nocite]{reference}
 \end{document}
