--- a/reference.bib
+++ b/reference.bib
@@ -297,3 +297,11 @@
   pages={39-44},
   year={2015},
 }
+@inproceedings{chan2016listen,
+  title={Listen, attend and spell: A neural network for large vocabulary conversational speech recognition},
+  author={Chan, William and Jaitly, Navdeep and Le, Quoc and Vinyals, Oriol},
+  booktitle={Acoustics, Speech and Signal Processing (ICASSP), 2016 IEEE International Conference on},
+  pages={4960--4964},
+  year={2016},
+  organization={IEEE}
+}
